<!--
    Copyright (C) 2024 Alvarado Ludwig & Martinez Juan José.

    This file is part of Dao.

    Dao is free software: you can redistribute it and/or modify it under the terms of the
    GNU General Public License as published by the Free Software Foundation, either version 3 of
    the License, or any later version.

    Dao is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
    without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
    the GNU General Public License for more details.

    You should have received a copy of the GNU General Public License along with this program. If
    not, see <https://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Dao</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_register">Registrarse</string>
    <string name="field_nombre">Nombre</string>
    <string name="field_username">Usuario</string>
    <string name="field_email">Correo electrónico</string>
    <string name="field_contraseña">Contraseña</string>
    <string name="text_welcome">Aquí inicia tu ruta de aprendizaje en el chino</string>
    <string name="descriptivo_logo">El icono de la app es la palabra Dao del chino tradicional</string>
    <string name="descriptivo_dojo">Esta sección está destinada a que compitas con otras personas</string>
    <string name="descriptivo_tao">Nuestro crecimiento depende de nosotros. Aquí aprendes cosas nuevas</string>
    <string name="descriptivo_muralla">Mi ruta de aprendizaje.</string>
    <string name="descriptivo_yop">Para ver hacia donde vamos, hemos de mirar en retrospectiva.</string>
    <string name="volverLogin">Volver a iniciar sesión</string>

    <string name="title_activity_inicio_principal">Inicio</string>
    <string name="Dojo">寺庙</string>
    <string name="Entrenar">培养</string>
    <string name="Camino">长城</string>
    <string name="Yo">我</string>
    <string name="cargando">Cargando...</string>
    <string name="descripci_n">Descripción</string>
    <string name="default_description">Esta es la descripción de defecto que presenta la
    aplicación, aquí se deberá colocar la información del usuario que quiera para su
    presentación. Sus hobbies, quién es y un poco de su vida. Va a tener un máximo de 260
    carácteres para escribir aquí.</string>
    <string name="estad_sticas">Estadísticas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Nombre de usuario</string>
    <string name="default_description_editar">Ingresa aquí tu nueva descripción!</string>
    <string name="title_activity_profile_pic">ProfilePic</string>
    <string name="title_activity_indice">Indice</string>
    <string name="Leccion1Lectura1">陆雨平： 力波，你好\n\n力波： 你好，陆雨平。</string>
    <string name="Leccion1Lectura2">力波： 林娜， 你好吗？\n\n
                                    林娜：我很好， 你呢？\n\n
                                    力波： 也很好。</string>
    <string name="Leccion1Notas">“Hola”, “¿Cómo te va?”
Ésta es la fórmula para saludar más común en chino. Puede ser utilizada en cualquier momento del día, cuando nos reunimos con gente por primera vez o para personas que ya conocemos. La respuesta a esta forma de saludo es también “你好“ (“Nǐ hǎo”).</string>
    <string name="Leccion1Notas2">“¿Qué tal estás?”\n
                            Ésta es también una forma de saludar. Se suele utilizar cuando hace mucho tiempo
                            no ves a una persona, y la respuesta es normalmente “我很好” (“Wǒ hěn hǎo”)
                            u otra fórmula similar.</string>
    <string name="Leccion1Notas3">“¿Y (cómo estás) tú?”</string>
    <string name="Leccion1Notas4">“(Yo estoy) bien (literalmente, muy bien) también”\n\n
                                    Ésta es una oración elíptica, con el sujeto “我” (wǒ) omitido.
                                    En el chino hablado, cuando el contexro es explícito y no hay
                                    ambigüedad, el sujeto se suele omitir. Se puede decir “很好” (“hěn hǎo”)
                                    para responder a la pregunta “你好吗？”(“Nǐ hǎo má？”)</string>
    <string name="text_victoria">Bien hecho!\n\nHas ordenado correctamente la oración!\n\nGanaste (1) punto extra para tú perfil </string>
    <string name="leccion1_expresionesclave_text">1. Nǐ hǎo.\n\n2. Nǐ hǎo ma?\n\n3. Wǒ hěn hǎo, nǐ ne?\n\n4. Yě hěn hǎo.</string>
    <string name="text_dialogo_situacional">Te encuentras con un amigo chino al que no has visto en mucho tiempo. ¿Qué le dirías a él/ella?\n\n
                                            Generalmente, se suele responder con las siguientes frases para saludar.</string>
    <string name="dialogo_situacional_zh">你好吗？\n我很好，你呢？\n我也很好。</string>
    <string name="leccion_1_fonetica_1">    En el chino moderno una sílaba generalmente está compuesta por una parte inicial, que es una consonante con la que
    comienza la sílaba, y una parte final, que forma el resto de la sílaba. Por ejemplo, en la sílaba
    “ping”, “p” es la parte inicial y “ing”, la final. Una sílaba puede formarse sin la parte inicial,
    como en “ye”, pero todas las sílabas deben tener un final. En el chino moderno hay en total
    21 partes iniciales y 38 finales.</string>
    <string name="leccion1_fonetica_2">Iniciales: m, n, l, h se pronuncian de modo similar a sus correspondientes
    en la lengua española. \n\t\t\t\t - b como “b” de “Barcelona” (no aspirada, sorda)
    \n\t\t\t\t - p como “p” de “Pamplona” (aspirada, sorda)
    \n\t\t\t\t - Nota: Se debe prestar especial atención a la pronunciación de las consonantes aspiradas y no aspiradas: b-p
    \n\nFinales: e como “e” en “her” de la palabra inglesa.
    \n\t\t\t\t ie como “ye” en “yeso” de la palabra española.
    \n\t\t\t\t -ng (final) un sonido nasal como “ng” en “bang” de la palabra inglesa sin pronunciar la “g”
    \n\t\t\t\t Noa: La pronunciación de la “e” en una final compuesta es diferente de la final simple “e”.</string>
    <string name="leccion1_fonetica_3">La lengua china es una lengua tonal en la que los tonos expresan diferencias en el significado.
    \n\n En la pronunciación hay 4 tonos básicos, representados respectivamente por las siguientes marcas de tono:
    \n\t\t “-” para el primer tono.
    \n\t\t “´” para el segundo tono.
    \n\t\t “^” para el tercer tono.
    \n\t\t “`” para el cuarto tono.
    \n\n Cuando una sílaba contiene una única vocal, la marca de tono se coloca directamente sobre la vocal
    como en “lù” y “hěn”. El punto de la vocal “i” se tiene que quitar si la marca de tono se coloca
    sobre ella, como en “ní”, “nín” y “píng”. Cuando el final de la sílaba está compuesto por dos o más vocales,
    la marca de tono se debe colocar sobre la vocal pronunciada con la boca más abierta.</string>


</resources>
