<?xml version="1.0" encoding="utf-8"?>
<!--
     This program is free software: you can redistribute it and/or modify it under the terms of the
     GNU General Public License as published by the Free Software Foundation, either version 3 of
     the License, or any later version.

    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
    without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
    the GNU General Public License for more details.

    You should have received a copy of the GNU General Public License along with this program. If
    not, see <https://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_muralla"
        android:icon="@drawable/muralla"
        android:title="@string/Camino" />

    <item
        android:id="@+id/ic_Kong"
        android:icon="@drawable/dojo"
        android:title="@string/Dojo" />

    <item
        android:id="@+id/ic_tao"
        android:icon="@drawable/tao"
        android:title="@string/Entrenar" />

    <item
        android:id="@+id/ic_wo"
        android:icon="@drawable/yop"
        android:title="@string/Yo" />
</menu>