<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_constrait_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterToApp"
    android:background="@color/fondo"
    android:paddingHorizontal="@dimen/dim_40dp"
    android:paddingVertical="33dp"
    >

    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_nombre"
        android:background="@drawable/circle_image_crop"
        android:src="@drawable/ic_launcher_logo"

        />

    <EditText
        android:id="@+id/register_nombre"
        style="@style/input_field"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/field_nombre"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/register_usuario"

        />

    <EditText
        android:id="@+id/register_usuario"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/field_username"
        android:autofillHints="username"
        android:inputType="text"
        style="@style/input_field"
        app:layout_constraintBottom_toTopOf="@id/register_email"
        />

    <EditText
        android:id="@+id/register_email"
        style="@style/input_field"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/field_email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/register_password"
        />

    <EditText
        android:id="@+id/register_password"
        style="@style/input_field"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/field_contraseña"
        android:autofillHints="password"
        android:inputType="textPassword"

        android:layout_marginBottom="@dimen/dim_40dp"
        app:layout_constraintBottom_toTopOf="@id/register_button_registrarse"
        />
    <Button
        android:id="@+id/register_button_registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

