<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/welcome"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/fondo"
    android:paddingHorizontal="40dp"
    android:paddingVertical="@dimen/dim_30dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_landing"
        android:background="@drawable/circle_image_crop"
        android:src="@drawable/fg_large"

        />

    <TextView
        android:id="@+id/text_landing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_welcome"
        android:fontFamily="@font/HelveticaNeueLight"
        android:textSize="30sp"
        android:textColor="@color/rojo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        android:layout_marginBottom="@dimen/dim_40dp"
        />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/button_primary"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/button_login"
        app:layout_constraintBottom_toTopOf="@id/buttonRegister"
        android:layout_marginBottom="@dimen/dim_10dp"
        />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/button_secondary"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="@dimen/dim_40dp"
        android:text="@string/button_register"

        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

