<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.leccion1.Leccion1Notas"
    android:layout_margin="30dp"

    >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/boton_notas_1"
        android:text="(1). Nǐ hǎo"
        android:padding="10dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/notas_content_1"
        android:text="@string/Leccion1Notas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_notas_1"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/boton_notas_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(2) Nǐ hǎo ma？"
        android:padding="10dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notas_content_1"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/notas_content_2"
        android:text="@string/Leccion1Notas2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boton_notas_2"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/boton_notas_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(3) Nǐ ne？"
        android:padding="10dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notas_content_2"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/notas_content_3"
        android:text="@string/Leccion1Notas3"
        app:layout_constraintTop_toBottomOf="@+id/boton_notas_3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/boton_notas_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(4) Yě hěn hǎo"
        android:padding="10dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notas_content_3"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/notas_content_4"
        android:text="@string/Leccion1Notas4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_notas_4"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>